--- a/test/en/index.html
+++ b/test/en/index.html
@@ -120,7 +120,7 @@
                 <div class="barre"></div>
                 <div class="sphère"></div>
             </div>
-            <p class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
+            <p id="text2" class="textphoto">Based in Ile-de-France and Morocco, SERVITHEN is a company that offers services in the field of gas cleaning as Project Manager (MOE) and Project Owner (MO) to closely examine your equipment and extend their duration lifestyle while adapting
                 to your needs.</p>
             <h3>Nos services :</h3>
 
