--- a/test/en/notreEngagementEN.html
+++ b/test/en/notreEngagementEN.html
@@ -98,12 +98,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, French industry, <br> 30 years of expertise. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Engineering, audit and project management assistance.
             </p>
         </div>
