--- a/test/en/serviceEN/service4EN.html
+++ b/test/en/serviceEN/service4EN.html
@@ -103,12 +103,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, French industry, <br> 30 years of expertise. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Installation audits and expertise.
             </p>
         </div>
@@ -128,7 +128,7 @@
                 <div class="sphère"></div>
             </div>
             <div class="pInfoService">
-                <p class="textphoto">Hot: we inspect your equipment while it is running and stopped to ensure that it is working properly. We take a close look at the equipment to ensure the proper functioning of your installation/equipment Thanks to to our long experience
+                <p id="text1" class="textphoto">Hot: we inspect your equipment while it is running and stopped to ensure that it is working properly. We take a close look at the equipment to ensure the proper functioning of your installation/equipment Thanks to to our long experience
                     in audits, we recommend improvements or modifications if necessary.
                 </p>
             </div>
@@ -137,7 +137,7 @@
                 <img id="photoService2" src="/img/diagnosticAudit.jpg" alt="photo Diagnostic">
             </div>
             <div class="pInfoService">
-                <p class="textphoto">Cold audit: Thanks to our knowledge, we assess your equipment and installations using measurement tools such as (thickness measurement). A deliverable will be provided at the end of the expertise in order to improve or correct to ensure
+                <p id="text2" class="textphoto">Cold audit: Thanks to our knowledge, we assess your equipment and installations using measurement tools such as (thickness measurement). A deliverable will be provided at the end of the expertise in order to improve or correct to ensure
                     the proper functioning of your equipment. We thus inspect all types of equipment from the inside and outside, example of equipment: oven (Summit, Vault, Burners), recuperator, bag filter, DeNOx, exchanger, bag filter (Analysis in a
                     certified laboratory), catalyst (Analysis in a certified laboratory) <br> The cold audit is a more in-depth inspection where we target the faulty or damaged equipment that we identify during operation of the installation.
                 </p>
