--- a/test/fr/MentionsLegales.html
+++ b/test/fr/MentionsLegales.html
@@ -104,7 +104,7 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Mentions Légales
             </p>
         </div>
