--- a/test/fr/serviceFR/service3.html
+++ b/test/fr/serviceFR/service3.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/fr/cssFR/service.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="/fr/jsFR/confianceFR.js"></script>
+    <script src="/securite/jsFR/service3FR.js"></script>
 
 </head>
 
@@ -108,12 +108,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Servithen, industrie française, <br> 30 ans de savoir faire. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Valorisation energetique.
             </p>
         </div>
@@ -133,7 +133,7 @@
                 <div class="sphère"></div>
             </div>
             <div class="pInfoService">
-                <p class="textphoto">A chaud : on inspecte vos équipements pendant qu’ils sont en marche et à l’arrêt pour s’assurer de leur bon fonctionnement. Nous regardons de près les équipements pour s’assurer du bon fonctionnement de votre installation/équipement Grâce
+                <p id="text1" class="textphoto">A chaud : on inspecte vos équipements pendant qu’ils sont en marche et à l’arrêt pour s’assurer de leur bon fonctionnement. Nous regardons de près les équipements pour s’assurer du bon fonctionnement de votre installation/équipement Grâce
                     à notre longue expérience dans les audits, nous préconisons des améliorations ou des modifications si nécessaire.
                 </p>
             </div>
@@ -142,7 +142,7 @@
                 <img id="photoService2" src="/img/diagnosticAudit.jpg" alt="photo Diagnostic">
             </div>
             <div class="pInfoService">
-                <p class="textphoto">Audit à froid : Grâce à nos connaissances, nous expertisons vos équipements et installations en utilisant des outils de mesures comme (mesure d’épaisseurs). Un livrable sera fourni à la fin des expertises dans le but d’améliorer ou de
+                <p id="text2" class="textphoto">Audit à froid : Grâce à nos connaissances, nous expertisons vos équipements et installations en utilisant des outils de mesures comme (mesure d’épaisseurs). Un livrable sera fourni à la fin des expertises dans le but d’améliorer ou de
                     corriger de garantir le bon fonctionnement de vos équipements. On inspecte ainsi tout type d’équipements de l’intérieur et de l’extérieur, exemple d’équipements : four (Sommet, Voute, Bruleurs), récupérateur, filtre à manche, DéNOx,
                     échangeur, filtre à manche (Analyse dans un laboratoire certifié), catalyseur (Analyse dans un laboratoire certifié) <br> L’audit à froid est une inspection plus approfondie où on cible l’équipement défaillant ou endommagé qu’on identifie
                     pendant le fonctionnement de l’installation.
