--- a/test/securite/modifFournitureFR.html
+++ b/test/securite/modifFournitureFR.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/fr/cssFR/accueilFR.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script type="text/javascript" src="/fr/jsFR/modifFournitureFR.js"></script>
+    <script type="text/javascript" src="/securite/jsFR/modifFournitureFR.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/fr/formFR.html">NOUS CONTACTER</a>
+                    <a class="MenuBtn" href="modifpas.html">NOUS CONTACTER</a>
 
                 </div>
 
@@ -42,8 +42,8 @@
                     <button class="dropbtn">INDUSTRIE 4.0 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/fr/appli.html">MyPartner</a>
-                        <a href="/fr/SolutionConnecteeGestionDistanceFR.html">Link 3</a>
+                        <a href="modifpas.html">MyPartner</a>
+                        <a href="modifpas.html">Link 3</a>
                     </div>
                 </div>
 
@@ -51,11 +51,11 @@
                     <button class="dropbtn">SERVICES 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/fr/serviceFR/modifservice1.html">Audits et Expertises d’installations</a>
-                    <a href="/fr/serviceFR/modifservice2.html">Remise aux normes réglementaire </a>
-                    <a href="/fr/serviceFR/modifservice3.html">Valorisation énergétique</a>
-                    <a href="/fr/serviceFR/modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
-                    <a href="/fr/serviceFR/modifservice5.html">Maintenance préventive / curative</a>
+                    <a href="modifservice1.html">Audits et Expertises d’installations</a>
+                    <a href="modifservice2.html">Remise aux normes réglementaire </a>
+                    <a href="modifservice3.html">Valorisation énergétique</a>
+                    <a href="modifservice4.html">Etudes de faisabilité, Avant-projets et études de détail</a>
+                    <a href="modifservice5.html">Maintenance préventive / curative</a>
                 </div>
                 </div>
 
@@ -63,14 +63,14 @@
                     <button class="dropbtn">PRODUITS 
                   </button>
                     <div class="dropdown-content3">
-                        <a href="/fr/ProduitFR/modifToursDeLavageFR.html">Tours de lavage</a>
-                        <a href="/fr/ProduitFR/modifVenturiFR.html">Venturi</a>
-                        <a href="/fr/ProduitFR/modifElectroFR.html">Electrofiltres humides / secs</a>
-                        <a href="/fr/ProduitFR/modifFiltresFR.html">Filtres à manches</a>
-                        <a href="/fr/ProduitFR/modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
-                        <a href="/fr/ProduitFR/modifInstallationsFR.html">Installations « Clés en mains »</a>
-                        <a href="/fr/ProduitFR/modifRecuperationFR.html">Récupération d’énergie</a>
-                        <a href="/fr/ProduitFR/modifFournitureFR.html">Fourniture de pièces de rechange</a>
+                        <a href="modifToursDeLavageFR.html">Tours de lavage</a>
+                        <a href="modifVenturiFR.html">Venturi</a>
+                        <a href="modifElectroFR.html">Electrofiltres humides / secs</a>
+                        <a href="modifFiltresFR.html">Filtres à manches</a>
+                        <a href="modifEquipementFR.html">EDIP : Equipements de Dosage et Injection de Poudres</a>
+                        <a href="modifInstallationsFR.html">Installations « Clés en mains »</a>
+                        <a href="modifRecuperationFR.html">Récupération d’énergie</a>
+                        <a href="modifFournitureFR.html">Fourniture de pièces de rechange</a>
                     </div>
                 </div>
 
@@ -78,15 +78,15 @@
                     <button class="dropbtn">SAVOIR-FAIRE 
                   </button>
                   <div class="dropdown-content3">
-                    <a href="/fr/modifpresentationFR.html">Notre métier</a>
-                    <a href="/fr/modifpourquoiFR.html">Pourquoi Servithen</a>
-                    <a href="/fr/modifengagementFR.html">Notre engagement</a>
+                    <a href="modifpresentationFR.html">Notre métier</a>
+                    <a href="modifpourquoiFR.html">Pourquoi Servithen</a>
+                    <a href="modifengagementFR.html">Notre engagement</a>
                 </div>
                 </div>
 
                 <div class="dropdown">
 
-                    <a class="MenuBtn" href="/fr/modifaccueilFR.html">ACCUEIL</a>
+                    <a class="MenuBtn" href="modifaccueilFR.html">ACCUEIL</a>
 
                 </div>
 
