--- a/test/en/MentionsLegalesEN.html
+++ b/test/en/MentionsLegalesEN.html
@@ -104,7 +104,7 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 Legal Notice
             </p>
         </div>
