--- a/test/en/ProduitEN/InstallationsEN.html
+++ b/test/en/ProduitEN/InstallationsEN.html
@@ -102,12 +102,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">class="pTitre">class="pTitre">class="pTitre">
                 Servithen, French industry, <br> 30 years of expertise. <br>
             </p>
         </div>
         <div id="soustxtAccueil">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">class="pTitre">class="pTitre">class="pTitre">
                 Engineering, audit and project management assistance.
             </p>
         </div>
