--- a/test/en/appliEN.html
+++ b/test/en/appliEN.html
@@ -96,12 +96,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Discover our application : <br>
             </p>
         </div>
         <div id="nomAppli">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 MyPartner.
             </p>
         </div>
