--- a/test/fr/SolutionConnecteeGestionDistanceFR.html
+++ b/test/fr/SolutionConnecteeGestionDistanceFR.html
@@ -98,12 +98,12 @@
 
     <div id="infoAccueil">
         <div id="txtAccueil">
-            <p class="pTitre">
+            <p id="txtTitre" class="pTitre">
                 Decrouvrez notre application: <br>
             </p>
         </div>
         <div id="nomAppli">
-            <p class="pTitre">
+            <p id="stxtTitre" class="pTitre">
                 MyPartner.
             </p>
         </div>
