--- a/test/securite/modifEquipementFR.html
+++ b/test/securite/modifEquipementFR.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <form method="post" action="/PHP/modifEquipementFR.php">
+    <form method="post" action="/securite/PHP/modifEquipementFR.php">
     <header>
 
         <!-- La bar navigation -->
