--- a/test/securite/modifengagementFR.html
+++ b/test/securite/modifengagementFR.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <form method="post" action="/PHP/modifengagementFR.php">
+    <form method="post" action="/securite/PHP/modifengagementFR.php">
     <header>
 
         <!-- La bar navigation -->
