--- a/test/securite/modifaccueilFR.html
+++ b/test/securite/modifaccueilFR.html
@@ -27,6 +27,7 @@
         
                 <a href="modifaccueilFR.html"><img class="logo" src="/img/logo.png " alt="logo Servithen"></a>
                 <button>Confirmer les changements</button>
+                <a href="PHP/deconnection.php">Deconnection</a>
                 <a href="modifaccueilFR.html"><img class="langage" src="/img/drapeau/france-flag-png-large.png" alt="logo drapeau fr"/></a>
     
                 <a href="modifpas.html"><img class="langage" src="/img/drapeau/united-kingdom-flag-png-large.png" alt="logo drapeau en"/></a>
